# simulate-u1446703

./: .gitignore  AGENT-PROGRESS.md  AGENTS.md  CMakeLists.txt  PROJECT-OVERVIEW.md  PROMPT.md  RESULTS.md  TASKS.md
.claude/: settings.local.json
docs/: ARCHITECTURE.md  BUILD.md
include/: csv_io.h  physics.h  renderer.h  sim_config.h
src/: color_assign.cpp  csv_io.cpp  main.cpp  physics.cpp  renderer.cpp  scene_gen.cpp
tests/: test_physics.cpp
